--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -44,7 +44,7 @@ body {
 
 /* Styles for the hero banner section with a background image */
 #hero-banner {
-  background-image: url("../images/02-hero-bg.jpg");
+  background-image: url("../images/banner.PNG");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
